Closes #7304 - Fix dropdown arrow colors, whew. - Normalize font sizes in Status area. - More color changes for contrast, including new theme constants. - TODO: compare and sync Espresso with other themes. - TODO: check for regressions!

--- a/src/styles/notebook.scss
+++ b/src/styles/notebook.scss
@@ -343,10 +343,6 @@
         > * + * {
             margin-top: $interiorMarginSm;
         }
-
-        [class*='created-'] {
-            color: pullForward($colorBodyFg, 20%);
-        }
     }
 
     &__time {
@@ -364,6 +360,11 @@
         > [class*='__'] + [class*='__'] {
             margin-top: $interiorMarginSm;
         }
+    }
+
+    &__text,
+    &__input {
+        color: $colorBodyFgEm !important;
     }
 
     &__text {
